So... I forgot to add the primary nav menu in the last commit. Crazy huh?

--- a/about.html
+++ b/about.html
@@ -9,6 +9,19 @@
 </head>
 
 <body>
+    <header>
+        <nav>
+            <img src="images/Group 3pslogo.svg" alt="">
+            <ul>
+                <li><a href="">Practice Areas</a></li>
+                <li><a href="">Our Team</a></li>
+                <li><a href="">Testimonials</a></li>
+                <li><a href="">About Us</a></li>
+            </ul>
+            <button>CONTACT US</button>
+        </nav>
+    </header>
+
     <main>
         <section>
             <div>
