I added the images and icons for the about page.

--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
         </section>
         <section>
             <div>
-                <img src="" alt="">
+                <img src="images/pearson team.jpg" alt="">
             </div>
             <div>
                 <h2>We have delivered stellar legal advice to Fortune 500 companies for over 2 decades</h2>
@@ -82,7 +82,7 @@
                     <div>
                         <div>
                             <h3>Excellence</h3>
-                            <img src="" alt="">
+                            <img src="images/award icon.svg" alt="">
                         </div>
 
                         <p>
@@ -93,7 +93,7 @@
                     <div>
                         <div>
                             <h3>Loyalty</h3>
-                            <img src="" alt="">
+                            <img src="images/teamwork icon.svg" alt="">
                         </div>
 
                         <p>
@@ -104,7 +104,7 @@
                     <div>
                         <div>
                             <h3>Honesty</h3>
-                            <img src="" alt="">
+                            <img src="images/correct icon.svg" alt="">
                         </div>
 
                         <p>
@@ -119,17 +119,17 @@
             <h2>Our Management Team</h2>
             <div>
                 <div>
-                    <img src="" alt="">
+                    <img src="images/j_auto_x2.jpg" alt="">
                     <p>Jessica Pearson</p>
                     <h3>Managing Partner</h3>
                 </div>
                 <div>
-                    <img src="" alt="">
+                    <img src="images/harvey_auto_x2.jpg" alt="">
                     <p>Harvey Specter</p>
                     <h3>Name Partner</h3>
                 </div>
                 <div>
-                    <img src="" alt="">
+                    <img src="images/lou_auto_x2.jpg" alt="">
                     <p>Louis Litt</p>
                     <h3>Name Partner</h3>
                 </div>
