Typography, colors, and other global styles added.

--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pearson Specter Litt</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/styles.css">
+
 </head>
 
 <body>
     <header>
         <nav>
-            <img src="images/Group 3pslogo.svg" alt="">
+            <img src="images/Group 3pslogo.svg" alt="PSL logo" class="small-logo">
             <ul>
                 <li><a href="">Practice Areas</a></li>
                 <li><a href="">Our Team</a></li>
@@ -261,41 +266,50 @@
     </section>
 
     <footer>
-        <div>
+        <div class="sales-hook">
             <img src="images/Group 3pslogo.svg" alt="">
             <p>We're the 1st law firm you should have hired and the last one you'll require.</p>
         </div>
 
-        <div>
-            <h3>Practice Areas</h3>
-            <div>
-                <p>Business Law</p>
-                <p>Family Law</p>
+        <div class="footer-practice-section">
+            <div class="footer-practice-content">
+                <h3>Practice Areas</h3>
+                <div class="footer-practice-areas">
+                    <div class="footer-practice-area1">
+                        <p>Business Law</p>
+                        <p>Family Law</p>
+                    </div>
+
+                    <div class="footer-practice-area2">
+                        <p>Health Law</p>
+                        <p>See all practice areas</p>
+                    </div>
+                </div>
             </div>
 
-            <div>
-                <p>Health Law</p>
-                <p>See all practice areas</p>
-            </div>
+
         </div>
 
-        <div>
+        <div class="footer-contact">
             <h3>Contact Us</h3>
-            <div>
-                <img src="images/email icon.svg" alt="">
-                <p>info@psl.com</p>
+            <div class="footer-contact-content">
+                <div class="footer-email">
+                    <img src="images/email icon.svg" alt="">
+                    <p>info@psl.com</p>
+                </div>
+
+                <div class="footer-phone">
+                    <img src="images/phone icon.svg" alt="">
+                    <p>+1-865-9999</p>
+                </div>
+
+                <div class="footer-social">
+                    <img src="images/fb icon.svg" alt="">
+                    <img src="images/twitter icon.svg" alt="">
+                    <img src="images/linkedin icon.svg" alt="">
+                </div>
             </div>
 
-            <div>
-                <img src="images/phone icon.svg" alt="">
-                <p>+1-865-9999</p>
-            </div>
-
-            <div>
-                <img src="images/fb icon.svg" alt="">
-                <img src="images/twitter icon.svg" alt="">
-                <img src="images/linkedin icon.svg" alt="">
-            </div>
         </div>
     </footer>
 </body>
