Typography styles edited. Button styles added. Hero image added

--- a/index.html
+++ b/index.html
@@ -27,37 +27,39 @@
         </nav>
     </header>
 
-    <section>
-        <div>
-            <div>
-                <p>"</p>
+    <section class="fold-area">
+        <div class="fold-area-section">
+            <div class="quote-group">
+                <img src="images/quote-group.png" alt="">
             </div>
-            <div>
-                <h1>When I needed to sue Qiadan, Pearson Specter Litt was the only choice, and we won!</h1>
+            <div class="usp-section">
+                <h1>When I needed to sue Qiaodan, Pearson Specter Litt was the only choice, and we won!</h1>
                 <p>Michael Jordan, NBA Hall of Famer</p>
             </div>
             <h3>Let's help you win</h3>
-            <button>BOOK A CONSULTATION</button>
+            <button class="pry-btn">BOOK A CONSULTATION</button>
         </div>
+    </section>
+    <section class="sales-pitch-section">
+        <section class="sales-pitch">
+            <div class="pitch-section">
+                <h3>500K+</h3>
+                <p>Cases Won</p>
+            </div>
+            <div class="yellow-line">
+            </div>
+            <div class="pitch-section">
+                <h3>$5 Billion</h3>
+                <p>Settlements Accrued</p>
+            </div>
+            <div class="yellow-line"></div>
+            <div class="pitch-section">
+                <h3>TOP 5</h3>
+                <p>Law Firms in the country</p>
+            </div>
+        </section>
     </section>
 
-    <section>
-        <div>
-            <h3>500K+</h3>
-            <p>Cases Won</p>
-        </div>
-        <div>
-        </div>
-        <div>
-            <h3>$5 Billion</h3>
-            <p>Settlements Accrued</p>
-        </div>
-        <div></div>
-        <div>
-            <h3>TOP 5</h3>
-            <p>Law Firms in the country</p>
-        </div>
-    </section>
 
     <section>
         <div>
@@ -142,7 +144,7 @@
             <p>Learn More</p>
         </div>
 
-        <button>SEE ALL PRACTICE AREAS</button>
+        <button class="pry-btn">SEE ALL PRACTICE AREAS</button>
     </section>
 
     <section>
@@ -262,7 +264,7 @@
         <h2>Think your case is "un-winnable?"</h2>
         <p>Think again.</p>
         <p>We specialize in getting the best possible outcome for our clients in "un-winnable" situations.</p>
-        <button>BOOK A CONSULTATION NOW</button>
+        <button class="pry-btn">BOOK A CONSULTATION NOW</button>
     </section>
 
     <footer>
