Styles for desktop breakpoint added for Home page

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                 <li><a href="">Practice Areas</a></li>
                 <li><a href="">Our Team</a></li>
                 <li><a href="">Testimonials</a></li>
-                <li><a href="">About Us</a></li>
+                <li><a href="/psl/about.html">About Us</a></li>
             </ul>
-            <button>CONTACT US</button>
+            <button onclick="window.location.href='/psl/contact.html';">CONTACT US</button>
         </nav>
     </header>
 
@@ -61,10 +61,10 @@
     </section>
 
 
-    <section>
-        <div>
+    <section class="recentcase">
+        <div class="recentcasecontrol">
             <h2>Recent cases</h2>
-            <div>
+            <div class="casecontrol">
                 <div>
                     <img src="images/arrow_back.svg" alt="">
                 </div>
@@ -77,113 +77,130 @@
             </div>
 
         </div>
+        <div class="news-section">
+            <div class="news-post">
+                <h3>The Ultimate Upset: Pearson Specter Litt takes down WLRK</h3>
+                <p>In what many are calling the most eventful case of the decade, Pearson Specter Litt left their
+                    opponents
+                    absolutely befuddled as they....</p>
+                <p class="tertiarybtn">
+                    Read More
+                </p>
+            </div>
 
-        <div>
-            <h3>The Ultimate Upset: Pearson Specter Litt takes down WLRK</h3>
-            <p>In what many are calling the most eventful case of the decade, Pearson Specter Litt left their opponents
-                absolutely befuddled as they....</p>
-            <p>
-                Read More
-            </p>
+            <div class="news-post">
+                <h3>“We won’t go quietly into the dark.”- PSL boldy declares.</h3>
+                <p>Proceedings continue at the Supreme court today as Pearson Specter Litt takes on the District
+                    Attorney’s
+                    office in a high profile case involving...</p>
+                <p class="tertiarybtn">
+                    Read More
+                </p>
+            </div>
+
+            <div class="news-post">
+                <h3>How it went down with Qiaodan - The Complete Backstory</h3>
+                <p>Here for a limited time only. The full story of how Pearson Specter Litt took and won arguably the
+                    biggest copyright case involving an athlete...</p>
+                <p class="tertiarybtn">
+                    Read More
+                </p>
+            </div>
         </div>
 
-        <div>
-            <h3>“We won’t go quietly into the dark.”- PSL boldy declares.</h3>
-            <p>Proceedings continue at the Supreme court today as Pearson Specter Litt takes on the District Attorney’s
-                office in a high profile case involving...</p>
-            <p>
-                Read More
-            </p>
-        </div>
-
-        <div>
-            <h3>How it went down with Qiaodan - The Backstory</h3>
-            <p>Here for a limited time only. The full story of how Pearson Specter Litt took and won arguably the
-                biggest copyright case involving an athlete...</p>
-            <p>
-                Read More
-            </p>
-        </div>
     </section>
 
-    <section>
-        <h3>Practice Areas</h3>
-        <div>
-            <img src="images/briefcase icon.svg" alt="">
-            <h3>BUSINESS LAW</h3>
-            <p>Learn More</p>
+    <section class="practice-area-section">
+        <h2>Practice Areas</h2>
+        <div class="practice-areas-box">
+            <div class="practice-areas">
+                <img src="images/briefcase icon.svg" alt="">
+                <h3>BUSINESS LAW</h3>
+                <p class="tertiarybtn">Learn More</p>
+            </div>
+
+            <div class="practice-areas">
+                <img src="images/family icon.svg" alt="">
+                <h3>FAMILY LAW</h3>
+                <p class="tertiarybtn">Learn More</p>
+            </div>
+
+            <div class="practice-areas">
+                <img src="images/building icon.svg" alt="">
+                <h3>REAL ESTATE LAW</h3>
+                <p class="tertiarybtn">Learn More</p>
+            </div>
+
+            <div class="practice-areas">
+                <img src="images/gavel icon.svg" alt="">
+                <h3>CRIMINAL LAW</h3>
+                <p class="tertiarybtn">Learn More</p>
+            </div>
+
+            <div class="practice-areas">
+                <img src="images/insured house icon.svg" alt="">
+                <h3>INSURANCE LAW</h3>
+                <p class="tertiarybtn">Learn More</p>
+            </div>
+
+            <div class="practice-areas">
+                <img src="images/health icon.svg" alt="">
+                <h3>HEALTH LAW</h3>
+                <p class="tertiarybtn">Learn More</p>
+            </div>
         </div>
 
-        <div>
-            <img src="images/family icon.svg" alt="">
-            <h3>FAMILY LAW</h3>
-            <p>Learn More</p>
-        </div>
-
-        <div>
-            <img src="images/building icon.svg" alt="">
-            <h3>REAL ESTATE LAW</h3>
-            <p>Learn More</p>
-        </div>
-
-        <div>
-            <img src="images/gavel icon.svg" alt="">
-            <h3>CRIMINAL LAW</h3>
-            <p>Learn More</p>
-        </div>
-
-        <div>
-            <img src="images/insured house icon.svg" alt="">
-            <h3>INSURANCE LAW</h3>
-            <p>Learn More</p>
-        </div>
-
-        <div>
-            <img src="images/health icon.svg" alt="">
-            <h3>HEALTH LAW</h3>
-            <p>Learn More</p>
-        </div>
 
         <button class="pry-btn">SEE ALL PRACTICE AREAS</button>
     </section>
 
-    <section>
-        <div>
+    <section class="our-team-section">
+        <div class="our-team-title">
             <h2>Our Team</h2>
-            <div>
+            <div class="see-all-members">
                 <p>See all</p>
                 <img src="images/arrow_forward.svg" alt="">
             </div>
         </div>
+        <div class="team-members-box">
+            <div class="team-member">
+                <img src="images/j_auto_x2.jpg" alt="">
+                <div class="team-member-info">
+                    <p>Jessica Pearson</p>
+                    <h3>Managing Partner</h3>
+                </div>
 
-        <div>
-            <img src="images/j_auto_x2.jpg" alt="">
-            <p>Jessica Pearson</p>
-            <h3>Managing Partner</h3>
+            </div>
+
+            <div class="team-member">
+                <img src="images/harvey_auto_x2.jpg" alt="">
+                <div class="team-member-info">
+                    <p>Harvey Specter</p>
+                    <h3>Name Partner</h3>
+                </div>
+            </div>
+
+            <div class="team-member">
+                <img src="images/lou_auto_x2.jpg" alt="">
+                <div class="team-member-info">
+                    <p>Louis Litt</p>
+                    <h3>Name Partner</h3>
+                </div>
+
+            </div>
         </div>
 
-        <div>
-            <img src="images/harvey_auto_x2.jpg" alt="">
-            <p>Harvey Specter</p>
-            <h3>Name Partner</h3>
-        </div>
-
-        <div>
-            <img src="images/lou_auto_x2.jpg" alt="">
-            <p>Louis Litt</p>
-            <h3>Name Partner</h3>
-        </div>
     </section>
 
-    <section>
-        <div>
+    <section class="testimonial-section">
+        <div class="testimonial-section-title">
             <h2>What Our Clients Have Said About Us</h2>
-            <div>
-                <div>
+            <div class="testimonial-section-navigation">
+                <div class="testimonial-nav-box">
                     <img src="images/arrow_back.svg" alt="">
                 </div>
 
-                <div>
+                <div class="testimonial-nav-box">
                     <img src="images/arrow_forward.svg" alt="">
                 </div>
 
@@ -191,79 +208,106 @@
             </div>
 
         </div>
+        <div class="testimonial-box">
+            <div class="testimonial-group">
+                <div class="quote">
+                    <p>"</p>
+                </div>
+                <div class="testimonial-info">
+                    <p class="testimonial-text">I’d given up on any chance of justice. But I decided to give it one last
+                        shot and I’m glad I took
+                        that
+                        shot with Pearson Specter Litt.</p>
+                    <div class="client-info">
+                        <p class="client">Tiffany Bridges</p>
+                        <p class="client-role">Mother, and Interior Designer</p>
+                    </div>
 
-        <div>
-            <div>
-                <p>"</p>
+                </div>
+
             </div>
-            <p>I’d given up on any chance of justice. But I decided to give it one last shot and I’m glad I took that
-                shot with Pearson Specter Litt.</p>
-            <p>Tiffany Bridges</p>
-            <p>Mother, and Interior Designer</p>
+
+            <div class="testimonial-group">
+                <div class="quote">
+                    <p>"</p>
+                </div>
+                <div class="testimonial-info">
+                    <p class="testimonial-text">Going through a divorce is tough. Pearson Specter Litt made mine as cool
+                        as
+                        a breeze. And yes, I got
+                        custody!</p>
+                    <div class="client-info">
+                        <p class="client">Jason Momoa</p>
+                        <p class="client-role">Actor</p>
+                    </div>
+
+                </div>
+
+            </div>
+
+            <div class="testimonial-group">
+                <div class="quote">
+                    <p>"</p>
+                </div>
+                <div class="testimonial-info">
+                    <p class="testimonial-text">When you make it to the top, people will come after you. So when I made
+                        it,
+                        I made sure to secure the
+                        services of the best in the business - Pearson Specter Litt.</p>
+                    <div class="client-info">
+                        <p class="client">Mark Cuban</p>
+                        <p class="client-role">Billionaire Owner of Dallas Mavericks</p>
+                    </div>
+
+                </div>
+
+            </div>
         </div>
 
-        <div>
-            <div>
-                <p>"</p>
-            </div>
-            <p>Going through a divorce is tough. Pearson Specter Litt made mine as cool as a breeze. And yes, I got
-                custody!</p>
-            <p>Jason Momoa</p>
-            <p>Actor</p>
-        </div>
-
-        <div>
-            <div>
-                <p>"</p>
-            </div>
-            <p>When you make it to the top, people will come after you. So when I made it, I made sure to secure the
-                services of the best in the business - Pearson Specter Litt.</p>
-            <p>Mark Cuban</p>
-            <p>Billionaire Owner of Dallas Mavericks</p>
-        </div>
     </section>
 
-    <section>
+    <section class="customers-section">
         <h2>Who We Represent</h2>
-        <div>
-            <div>
-                <img src="images/tesla svg logo.png" alt="">
+        <div class="customer-logo-group">
+            <div class="customer-logo">
+                <img src="images/tesla.png" alt="">
             </div>
 
-            <div>
+            <div class="customer-logo">
                 <img src="images/mercedes svg logo.png" alt="">
             </div>
 
-            <div>
+            <div class="customer-logo">
                 <img src="images/gucci logo.jpg" alt="">
             </div>
 
-            <div>
+            <div class="customer-logo">
                 <img src="images/twitter logo.png" alt="">
             </div>
 
-            <div>
+            <div class="customer-logo">
                 <img src="images/attlassian logo.png" alt="">
             </div>
 
-            <div>
+            <div class="customer-logo">
                 <img src="images/chanel logo.png" alt="">
             </div>
 
-            <div>
+            <div class="customer-logo">
                 <img src="images/dropbox logo.png" alt="">
             </div>
 
-            <div>
+            <div class="customer-logo">
                 <img src="images/ferrari logo.png" alt="">
             </div>
         </div>
     </section>
 
-    <section>
-        <h2>Think your case is "un-winnable?"</h2>
+    <section class="unwinnable-section">
+        <h2>Think your case is "un-winnable?</h2>
         <p>Think again.</p>
-        <p>We specialize in getting the best possible outcome for our clients in "un-winnable" situations.</p>
+        <p class="last-p">We specialize in getting the best possible outcome for our clients in "un-winnable"
+            situations.</p>
         <button class="pry-btn">BOOK A CONSULTATION NOW</button>
     </section>
 
