--- a/about.html
+++ b/about.html
@@ -6,179 +6,208 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Pearson Specter Litt</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
     <header>
         <nav>
-            <img src="images/Group 3pslogo.svg" alt="">
+            <img src="images/Group 3pslogo.svg" alt="PSL logo" class="small-logo">
             <ul>
                 <li><a href="">Practice Areas</a></li>
                 <li><a href="">Our Team</a></li>
                 <li><a href="">Testimonials</a></li>
-                <li><a href="">About Us</a></li>
+                <li><a href="/psl/about.html" class="about">About Us</a></li>
             </ul>
-            <button>CONTACT US</button>
+            <button onclick="window.location.href='/psl/contact.html';">CONTACT US</button>
         </nav>
     </header>
 
-    <main>
-        <section>
-            <div>
-                <h1>We're the 1st law firm you should have hired and the last one you'll require.</h1>
-                <p>Think of us as your legal swiss army knife, always ready to fix your problems regardless of what they
-                    may be.</p>
-                <button>BOOK A CONSULTATION</button>
-            </div>
-            <div>
-                <video src=""></video>
-            </div>
-        </section>
-        <section>
-            <div>
-                <img src="images/pearson team.jpg" alt="">
-            </div>
-            <div>
-                <h2>We have delivered stellar legal advice to Fortune 500 companies for over 2 decades</h2>
-                <p>Pearson Specter Litt has provided legal advice that made and saved a wide array of Fortune 500
-                    companies millions</p>
-                <button>SEE COMPANIES WE REPRESENT</button>
-            </div>
-        </section>
+    <section class="promo-section">
+        <div class="promo-info">
+            <h1>We're the 1st law firm you should have hired and the last one you'll require.</h1>
+            <p>Think of us as your legal swiss army knife, always ready to fix your problems regardless of what they
+                may be.</p>
+            <button class="pry-btn">BOOK A CONSULTATION</button>
+        </div>
+        <div class="promo-video">
+            <iframe width="400" height="250" src="https://www.youtube.com/embed/cyodliGZiQU"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </div>
+    </section>
+    <section class="promo-section2">
+        <div class="promo-image">
+            <img src="images/pearson team.jpg" alt="">
+        </div>
+        <div class="promo-info2">
+            <h2>We have delivered stellar legal advice to Fortune 500 companies for over 2 decades</h2>
+            <p>Pearson Specter Litt has provided legal advice that made and saved a wide array of Fortune 500
+                companies millions</p>
+            <button class="pry-btn">SEE COMPANIES WE REPRESENT</button>
+        </div>
+    </section>
 
-        <section>
-            <div>
-                <h2>A Brief History</h2>
-                <div>
-                    <ul>
-                        <li>
-                            <p>Pearson Hardman LLP was founded in 2003 at the dissolution of Gordon Schmidt Van Dyke.
-                            </p>
-                        </li>
-                    </ul>
-                </div>
-                <div>
-                    <ul>
-                        <li>
-                            <p>In 2007, we became Pearson Specter LLP after a name partner retired.</p>
-                        </li>
-                    </ul>
-                </div>
-                <div>
-                    <ul>
-                        <li>
-                            <p>In 2018, we became Pearson Specter Litt LLC.</p>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+    <section class="history-section">
 
-        </section>
-
-        <section>
-            <div>
-                <h2>Our Values</h2>
-                <div>
-                    <div>
-                        <div>
-                            <h3>Excellence</h3>
-                            <img src="images/award icon.svg" alt="">
-                        </div>
-
-                        <p>
-                            We guarantee the best possible outcome for your case.
+        <h2>A Brief History</h2>
+        <div class="history-cards">
+            <div class="history-card">
+                <ul>
+                    <li>
+                        <p class="history-text">Pearson Hardman LLP was founded in 2003 at the dissolution of Gordon
+                            Schmidt Van Dyke.
                         </p>
-                    </div>
-
-                    <div>
-                        <div>
-                            <h3>Loyalty</h3>
-                            <img src="images/teamwork icon.svg" alt="">
-                        </div>
-
-                        <p>
-                            We strive to justify your trust in us daily.
-                        </p>
-                    </div>
-
-                    <div>
-                        <div>
-                            <h3>Honesty</h3>
-                            <img src="images/correct icon.svg" alt="">
-                        </div>
-
-                        <p>
-                            We speak plainly, clearly and truthfully.
-                        </p>
-                    </div>
-                </div>
+                    </li>
+                </ul>
             </div>
-        </section>
+            <div class="history-card">
+                <ul>
+                    <li>
+                        <p class="history-text">In 2007, we became Pearson Specter LLP after a name partner retired.</p>
+                    </li>
+                </ul>
+            </div>
+            <div class="history-card">
+                <ul>
+                    <li>
+                        <p class="history-text">In 2018, we became Pearson Specter Litt LLC.</p>
+                    </li>
+                </ul>
+            </div>
+        </div>
 
-        <section>
-            <h2>Our Management Team</h2>
-            <div>
-                <div>
-                    <img src="images/j_auto_x2.jpg" alt="">
+
+
+    </section>
+
+    <section class="value-section">
+
+        <h2>Our Values</h2>
+        <div class="value-cards">
+            <div class="value-card">
+                <div class="value-card-title">
+                    <h3>Excellence</h3>
+                    <img src="images/award icon.svg" alt="">
+                </div>
+
+                <p>
+                    We guarantee the best possible outcome for your case.
+                </p>
+            </div>
+
+            <div class="value-card">
+                <div class="value-card-title">
+                    <h3>Loyalty</h3>
+                    <img src="images/teamwork icon.svg" alt="">
+                </div>
+
+                <p>
+                    We strive to justify your trust in us daily.
+                </p>
+            </div>
+
+            <div class="value-card">
+                <div class="value-card-title">
+                    <h3>Honesty</h3>
+                    <img src="images/correct icon.svg" alt="">
+                </div>
+
+                <p>
+                    We speak plainly, clearly and truthfully.
+                </p>
+            </div>
+        </div>
+
+    </section>
+
+    <section class="management-section">
+        <h2>Our Management Team</h2>
+        <div class="management-team-members">
+            <div class="team-member">
+                <img src="images/j_auto_x2.jpg" alt="">
+                <div class="team-member-info">
                     <p>Jessica Pearson</p>
                     <h3>Managing Partner</h3>
                 </div>
-                <div>
-                    <img src="images/harvey_auto_x2.jpg" alt="">
+
+            </div>
+            <div class="team-member">
+                <img src="images/harvey_auto_x2.jpg" alt="">
+                <div class="team-member-info">
                     <p>Harvey Specter</p>
                     <h3>Name Partner</h3>
                 </div>
-                <div>
-                    <img src="images/lou_auto_x2.jpg" alt="">
+
+            </div>
+            <div class="team-member">
+                <img src="images/lou_auto_x2.jpg" alt="">
+                <div class="team-member-info">
                     <p>Louis Litt</p>
                     <h3>Name Partner</h3>
                 </div>
+
             </div>
+        </div>
 
-            <button>SEE ALL TEAM MEMBERS</button>
-        </section>
+        <button class="pry-btn">SEE ALL TEAM MEMBERS</button>
+    </section>
 
-        <hr>
+    <hr>
 
-        <footer>
-            <div>
-                <img src="images/Group 3pslogo.svg" alt="">
-                <p>We're the 1st law firm you should have hired and the last one you'll require.</p>
-            </div>
 
-            <div>
+
+    <footer>
+        <div class="sales-hook">
+            <img src="images/Group 3pslogo.svg" alt="">
+            <p>We're the 1st law firm you should have hired and the last one you'll require.</p>
+        </div>
+
+        <div class="footer-practice-section">
+            <div class="footer-practice-content">
                 <h3>Practice Areas</h3>
-                <div>
-                    <p>Business Law</p>
-                    <p>Family Law</p>
-                </div>
+                <div class="footer-practice-areas">
+                    <div class="footer-practice-area1">
+                        <p>Business Law</p>
+                        <p>Family Law</p>
+                    </div>
 
-                <div>
-                    <p>Health Law</p>
-                    <p>See all practice areas</p>
+                    <div class="footer-practice-area2">
+                        <p>Health Law</p>
+                        <p>See all practice areas</p>
+                    </div>
                 </div>
             </div>
 
-            <div>
-                <h3>Contact Us</h3>
-                <div>
+
+        </div>
+
+        <div class="footer-contact">
+            <h3>Contact Us</h3>
+            <div class="footer-contact-content">
+                <div class="footer-email">
                     <img src="images/email icon.svg" alt="">
                     <p>info@psl.com</p>
                 </div>
 
-                <div>
+                <div class="footer-phone">
                     <img src="images/phone icon.svg" alt="">
                     <p>+1-865-9999</p>
                 </div>
 
-                <div>
+                <div class="footer-social">
                     <img src="images/fb icon.svg" alt="">
                     <img src="images/twitter icon.svg" alt="">
                     <img src="images/linkedin icon.svg" alt="">
                 </div>
             </div>
-        </footer>
-    </main>
+
+        </div>
+    </footer>
 </body>
 
 </html>
