Styles for mobile and tablet breakpoints for About page and Contact pages added

--- a/about.html
+++ b/about.html
@@ -28,17 +28,24 @@
 
     <section class="promo-section">
         <div class="promo-info">
-            <h1>We're the 1st law firm you should have hired and the last one you'll require.</h1>
-            <p>Think of us as your legal swiss army knife, always ready to fix your problems regardless of what they
-                may be.</p>
-            <button class="pry-btn">BOOK A CONSULTATION</button>
+            <div class="promo-infotext">
+                <h1>We're the 1st law firm you should have hired and the last one you'll require.</h1>
+                <p>Think of us as your legal swiss army knife, always ready to fix your problems regardless of what they
+                    may be.</p>
+            </div>
+
+
+            <div class="promo-video">
+                <iframe width="400" height="250" src="https://www.youtube.com/embed/cyodliGZiQU"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            </div>
+
         </div>
-        <div class="promo-video">
-            <iframe width="400" height="250" src="https://www.youtube.com/embed/cyodliGZiQU"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-        </div>
+
+        <button class="pry-btn">BOOK A CONSULTATION</button>
+
     </section>
     <section class="promo-section2">
         <div class="promo-image">
