Styles for New post edited. Links to home page added to nav

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <!-- NAVIGATION -->
     <nav>
-        <img src="images/Group 3pslogo.svg" alt="PSL logo" class="small-logo">
+        <a href="#"><img src="images/Group 3pslogo.svg" alt="PSL logo" class="small-logo"></a>
         <div class="container">
 
             <ul>
