Nav links to about and contact pages edited

--- a/pages/about.html
+++ b/pages/about.html
@@ -23,10 +23,10 @@
                 <li><a href="#practice-areas">Practice Areas</a></li>
                 <li><a href="#our-team">Our Team</a></li>
                 <li><a href="#testimonials">Testimonials</a></li>
-                <li><a href="pages/about.html">About Us</a></li>
+                <li><a href="about.html">About Us</a></li>
             </ul>
 
-            <a href="pages/contact.html" class="contact-btn"><button>CONTACT
+            <a href="contact.html" class="contact-btn"><button>CONTACT
                     US</button></a>
 
         </div>
