--- a/pages/contact.html
+++ b/pages/contact.html
@@ -23,7 +23,7 @@
                 <li><a href="#practice-areas">Practice Areas</a></li>
                 <li><a href="#our-team">Our Team</a></li>
                 <li><a href="#testimonials">Testimonials</a></li>
-                <li><a href="pages/about.html">About Us</a></li>
+                <li><a href="about.html">About Us</a></li>
             </ul>
 
             <a href="pages/contact.html" class="contact-btn"><button>CONTACT
