--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
-    <link rel="icon" href="/psl/images/Group 3pslogo.ico">
-    <!-- MATERIAL ICONS CDN -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Round">
-    <script src="/psl/index.js" defer></script>
+    <link rel="icon" href="images/Group 3pslogo.ico">
+
+    <script src="index.js" defer></script>
 
 
 </head>
